fixed pos overflow, fixed error comp, added loader

--- a/src/Components/Error/Error.css
+++ b/src/Components/Error/Error.css
@@ -17,7 +17,7 @@
     margin: 2rem 0;
     background-color: hsla(0, 97%, 69%, 0.377);
     padding: .9rem;
-    color: rgb(114, 0, 0);
+    color: rgb(54, 2, 2);
 }
 
 p.res{
