--- a/src/Components/Loader/Loader.css
+++ b/src/Components/Loader/Loader.css
@@ -1,40 +1,126 @@
-.loader-overlay{
+.loader {
+    background: linear-gradient(var(--backgroundColorLight), var(--recentWordsBackgroundColorLight));
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 99999;
+}
+
+.loader-inner {
+    bottom: 0;
+    height: 60px;
+    left: 0;
+    margin: auto;
     position: absolute;
-    top:0;
-    left:0;
-    width:100vw;
-    height:100vh;
-    background-color: var(--backgroundColorLight);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 3;
+    right: 0;
+    top: 0;
+    width: 100px;
 }
 
-.loader-overlay p{
-    font-size: 1.6rem;
-    color: white;
+.loader-line-wrap {
+    animation: 
+		spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite
+	;
+    box-sizing: border-box;
+    height: 50px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    transform-origin: 50% 100%;
+    width: 100px;
+}
+.loader-line {
+    border: 4px solid transparent;
+    border-radius: 100%;
+    box-sizing: border-box;
+    height: 100px;
+    left: 0;
+    margin: 0 auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100px;
+}
+.loader-line-wrap:nth-child(1) { animation-delay: -50ms; }
+.loader-line-wrap:nth-child(2) { animation-delay: -100ms; }
+.loader-line-wrap:nth-child(3) { animation-delay: -150ms; }
+.loader-line-wrap:nth-child(4) { animation-delay: -200ms; }
+.loader-line-wrap:nth-child(5) { animation-delay: -250ms; }
+
+.loader-line-wrap:nth-child(1) .loader-line {
+    border-color: var(--green);
+    height: 90px;
+    width: 90px;
+    top: 7px;
+}
+.loader-line-wrap:nth-child(2) .loader-line {
+    border-color: var(--blue);
+    height: 76px;
+    width: 76px;
+    top: 14px;
+}
+.loader-line-wrap:nth-child(3) .loader-line {
+    border-color: var(--pink);
+    height: 62px;
+    width: 62px;
+    top: 21px;
+}
+.loader-line-wrap:nth-child(4) .loader-line {
+    border-color: var(--red);
+    height: 48px;
+    width: 48px;
+    top: 28px;
+}
+.loader-line-wrap:nth-child(5) .loader-line {
+    border-color: var(--purple);
+    height: 34px;
+    width: 34px;
+    top: 35px;
+}
+
+@keyframes spin {
+    0%, 15% {
+		transform: rotate(0);
+		-webkit-transform: rotate(0);
+		-moz-transform: rotate(0);
+		-ms-transform: rotate(0);
+		-o-transform: rotate(0);
+}
+	90% {
+		transform: rotate(360deg) scale(1.3);
+		-webkit-transform: rotate(360deg) scale(1.3);
+		-moz-transform: rotate(360deg) scale(1.3);
+		-ms-transform: rotate(360deg) scale(1.3);
+		-o-transform: rotate(360deg) scale(1.3);
+}
+
+100%{
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+}
+}
+
+.loader p{
+    position: absolute;
+    left: 50%;
+    top:65%;
+    font-size: 1.7rem;
+    color: var(--textColorLight);
     font-weight: 700;
-    border: 2px solid var(--primaryColor);
-    padding: 3rem;
-    border-radius: 12px;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    -ms-border-radius: 12px;
-    -o-border-radius: 12px;
-    background-image:linear-gradient(to bottom right, hsl(var(--hue), 90%, 80%),var(--primaryColor));
-    background-size: 200% 200%;
-    animation: slide 3s ease infinite alternate;
-    -webkit-animation: slide 3s ease infinite alternate;
-}
-
-@keyframes slide {
-    100%{
-    background-position: 100% 100%;
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-}
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    background-image: linear-gradient(to right, var(--primaryColor), var(--partOfSpeechActiveLight));
+    background-clip: text;
+    color: transparent;
+    text-align: center;
 }
