--- a/src/Components/PartOfSpeech/PartOfSpeech.css
+++ b/src/Components/PartOfSpeech/PartOfSpeech.css
@@ -1,8 +1,9 @@
 .parts-of-speech-container{
     max-width: 100%;
-    max-width: 32rem;
+    max-width: 80rem;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     margin: 0 0 2rem 0;
 }
 
@@ -12,7 +13,7 @@
     background-color: var(--partOfSpeechInactiveLight);
     opacity: .5;
     border: none;
-    margin: 0 2rem 0 0;
+    margin: 0 2rem .5rem 0;
     transition: transform .2s ease-in-out;
     -webkit-transition: transform .2s ease-in-out;
     -moz-transition: transform .2s ease-in-out;
